--- a/main.html
+++ b/main.html
@@ -7,16 +7,20 @@
 </head>
 
 <body>
-	<h1>3 random audios </h1>
-<nav> <ul>
-<li> <a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3
-">Home</a></li>
+	<nav>
+		<ul class="navbar">
 
-	<li> <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">About us</a></li>
- <li> <a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3.">Contact us</a></li>
-</ul>
-</nav>
-
+			<li> <a href="https://github.com/acciojob/semantic-navbar-and-audios-deepakladhe"></a>Home</li>
+              <li><a href="https://github.com/acciojob/semantic-navbar-and-audios-deepakladhe"></a>About us</li>
+		     <li><a href="https://github.com/acciojob/semantic-navbar-and-audios-deepakladhe"></a>Contact us</li>
+			</ul>
+	</nav>
+ 
+	<h3>3 random audios</h3>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+    
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+	<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3." controls></audio>
 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
