--- a/main.html
+++ b/main.html
@@ -8,11 +8,10 @@
 
 <body>
 	<nav>
-		<ul class="navbar">
-
-			<li> <a href="https://github.com/acciojob/semantic-navbar-and-audios-deepakladhe"></a>Home</li>
-              <li><a href="https://github.com/acciojob/semantic-navbar-and-audios-deepakladhe"></a>About us</li>
-		     <li><a href="https://github.com/acciojob/semantic-navbar-and-audios-deepakladhe"></a>Contact us</li>
+		<ul>
+			<a href="www.facebook.com"><li>Home</li></a>
+			<a href="www.google.com"><li>About us</li></a>
+			<a href="www.yahoo.com"><li>Contact us</li></a>
 			</ul>
 	</nav>
  
